[package]
name = "kda-tools"
version = "0.2.0"
authors = ["Josh Vander Hook <josh@vanderhook.info>"]
description = "Toosl for doing data management on a match journal, specifally for  Hunt Showdown, but it'll work for any sport / game"
edition = "2018"
readme= "README.md"
license-file = "LICENSE"
homepage = "https://github.com/jodavaho/kda-tools"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex="1.4.0"
nalgebra="0.25.0"
kvc = "0.4.0"
clap ="2.33.0"
