[package]
name = "kda-tools"
version = "1.0.1"
authors = ["Josh Vander Hook <josh@vanderhook.info>"]
description = "Tools for doing data management on a match journal, specifally for  Hunt Showdown, but it'll work for any sport / game"
edition = "2018"
readme= "README.md"
license-file = "LICENSE"
homepage = "https://github.com/jodavaho/kda-tools"
keywords = ["games","journal","text-processing"]
categories = ["Command Line Utilities"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
claim = "0.5.0"
clap ="2.33.0"
kvc = "1.0.0"
pbr="1.0.4"
poisson-rate-test="1.2.0"
rand="0.8.3"
rand_distr="0.4.0"
statrs="0.13.0"
